solved mobile viewport error : overflow-X not applying to body by default

--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -1,11 +1,13 @@
 body {
+  width: 100vw;
   margin: 0;
   font-family: "Lato", sans-serif;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.App {
+  overflow-x: hidden;
+}
 .bgblur {
   backdrop-filter: blur(10px);
 }
@@ -14,4 +16,8 @@ body {
   height: 0;
   position: relative;
   top: -80px; // Shift up due to the pos
+}
+
+#navbar {
+  width: 100vw;
 }
