--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -34,11 +34,21 @@
   bottom: 10vh;
 }
 
-#arrow {
+.arrow {
   position: absolute;
   left: 50%;
+  text-align: center;
   bottom: 0;
-  margin-bottom: 1vh;
+  margin-bottom: 5vh;
   width: 100px;
   height: 100px;
+  transform: translateX(-50%);
+}
+#arrowDiv {
+  opacity: 0;
+  border-radius: 100%;
+  background-color: white;
+}
+#arrow {
+  z-index: 1;
 }
